[project]
name = "markdown-img-icexmoon"
dynamic = ["version"]
description = "A program for find and upload images in markdown file and will replace them."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["markdown", "image"]
authors = [{ email = "icexmoon@qq.com" }, { name = "icexmoon" }]
classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent",
]
dependencies = [
    "cos-python-sdk-v5>=1.9.41",
    "pillow>=12.1.0",
    "qiniu>=7.17.0",
    "requests>=2.32.5",
    "tinify>=1.7.1",
    "upyun>=2.5.5",
]

[project.scripts]
pymdimg = "markdown_img.__main__:main"

[project.urls]
homepage = "https://github.com/icexmoon/markdown-img"
documentation = "https://github.com/icexmoon/markdown-img"
repository = "https://github.com/icexmoon/markdown-img"
changelog = "https://github.com/icexmoon/markdown-img"

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"] # 打包依赖
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/markdown_img/_version.py"

[tool.setuptools.packages.find]
where = ["src"] 
include = ["markdown_img"]