[metadata]
# replace with your username:
name = markdown-img-icexmoon
version = 0.0.5
author = icexmoon
author_email = icexmoon@qq.com
description = A program for find and upload images in markdown file and will replace them.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src