[metadata]
name = markdown-img-icexmoon
version = 0.3.5
author = icexmoon
author_email = icexmoon@qq.com
description = A program for find and upload images in markdown file and will replace them.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/icexmoon/markdown-img
project_urls =
    Bug Tracker = https://github.com/icexmoon/markdown-img/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = False
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    requests
    futures
    cos-python-sdk-v5
    qiniu
    upyun
    Pillow
    tinify

[options.package_data]
* = *.info

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pymdimg = markdown_img.__main__:main